--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.81",
+    "@mui/material": "^5.7.0",
+    "@mui/styles": "^5.7.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "jest": "^28.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
