--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start"
+    "test": "jest",
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "author": "",
   "license": "ISC",
@@ -20,12 +21,13 @@
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
-    "jest": "^28.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "react-swipeable-views": "^0.14.0",
+    "react-toastify": "^9.0.1"
   },
   "browserslist": {
     "production": [
@@ -38,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.18.0",
+    "jest": "^28.1.0"
   }
 }
