--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URL =  "mongodb+srv://nirojan:sliit2020@cluster0.qq3lw.mongodb.net/RPMT?retryWrites=true&w=majority"
+URL = "http://localhost:5000/api/v1/"
